# IDA-Indice-de-Durabilidade-Agroquimica

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dados/brutos/estruturas/: 2FBW_chainB_confidence.json
dados/brutos/sequencias/: sdh_b_fungi_homologs.fasta
dados/exemplo/: confidence_exemplo.json  homologos_exemplo.fasta  mutations_exemplo.csv  programs.json  regional_data.json
resultados/: ida_colletotrichum_sdh.json  ida_complete.json  ida_molecular.json  ida_molecular_residues.csv  ida_molecular_results.json  ida_molecular_sdh.json  ida_phakopsora_sdh.json  ida_programa.json  ida_pyricularia_cytb.json  ida_regional.json  ida_zymoseptoria_cyp51.json
src/: __init__.py  alphafold_client.py  confidence_extractor.py  confidence_reporter.py  config.py  conservation_scorer.py  fitness_cost_estimator.py  ida_calculator.py  ida_molecular.py  ida_programa.py  ida_regional.py  msa_runner.py  pdb_parser.py  pipeline.py  pocket_detector.py  robustness_scanner.py  sasa_calculator.py  sidra_client.py  stability_scorer.py  uniprot_client.py
tests/: __init__.py  conftest.py  test_pipeline.py
